// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer> renders correctly With active link 1`] = `
<footer
  className="page-footer "
>
  <div
    className="logo "
  >
    <a
      className="logo__link logo__link--light"
      href="/"
      onClick={[Function]}
    >
      <span
        className="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        className="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        className="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
  <div
    className="copyright"
  >
    <p>
      © 2019 What to watch Ltd.
    </p>
  </div>
</footer>
`;

exports[`<Footer> renders correctly Without active link 1`] = `
<footer
  className="page-footer "
>
  <div
    className="logo "
  >
    <a
      className="logo__link logo__link--light"
    >
      <span
        className="logo__letter logo__letter--1"
      >
        W
      </span>
      <span
        className="logo__letter logo__letter--2"
      >
        T
      </span>
      <span
        className="logo__letter logo__letter--3"
      >
        W
      </span>
    </a>
  </div>
  <div
    className="copyright"
  >
    <p>
      © 2019 What to watch Ltd.
    </p>
  </div>
</footer>
`;
